[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Principal.gd" type="Script" id=1]
[ext_resource path="res://Assets/Caçador.png" type="Texture" id=2]
[ext_resource path="res://Assets/Arvore cima.png" type="Texture" id=3]
[ext_resource path="res://Scene/Arara.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Arvore baixo.png" type="Texture" id=5]
[ext_resource path="res://pooh.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scene/Save.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Arara azul.png" type="Texture" id=8]
[ext_resource path="res://Nice Sugar.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Green Background.png" type="Texture" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 92, 101, 0, 101, 0, 1, 92, 1 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 61, 59, 0, 57, 0, 0, 60, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 62, 67, 0, 67, 0, 0, 62, 0 )

[sub_resource type="TileSet" id=2]
0/name = "Arvore baixo.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 42, 79, 92, 101 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Arvore cima.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 42, 71, 61, 59 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Arvore cima.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 41, 71, 64, 69 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Node2D" type="Node2D"]
position = Vector2( 136, 88 )
script = ExtResource( 1 )

[node name="GreenBackground2" type="Sprite" parent="."]
position = Vector2( 526, 258 )
scale = Vector2( 0.722005, 0.65625 )
texture = ExtResource( 10 )

[node name="Arara" parent="." instance=ExtResource( 4 )]
position = Vector2( -64, 336 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 2, 0, -131062, 0, 0, -131061, 0, 0, -131060, 2, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -3, 0, 0, -65527, 2, 0, -65524, 2, 0, -65521, 2, 0, -65518, 2, 0, 65533, 0, 0, 9, 2, 0, 12, 2, 0, 15, 2, 0, 18, 2, 0, 131069, 0, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65542, 2, 0, 65545, 2, 0, 65551, 2, 0, 65554, 2, 0, 196605, 0, 0, 131072, 2, 0, 131075, 2, 0, 131078, 2, 0, 131081, 2, 0, 131082, 2, 0, 131085, 2, 0, 131087, 2, 0, 131090, 2, 0, 262141, 0, 0, 196608, 2, 0, 196611, 2, 0, 196613, 2, 0, 196614, 2, 0, 196618, 2, 0, 196621, 2, 0, 196624, 2, 0, 196626, 2, 0, 327677, 0, 0, 262144, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262157, 2, 0, 262162, 2, 0, 393213, 0, 0, 327680, 2, 0, 327687, 2, 0, 327688, 2, 0, 327692, 2, 0, 327695, 2, 0, 327698, 2, 0, 458749, 0, 0, 393216, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393227, 2, 0, 393228, 2, 0, 393231, 2, 0, 393234, 2, 0, 524285, 0, 0, 458752, 2, 0, 458763, 2, 0, 458767, 2, 0, 458770, 2, 0, 589821, 0, 0, 589822, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0 )

[node name="Caçador" type="Sprite" parent="TileMap"]
position = Vector2( -64, 448 )
scale = Vector2( 0.236, 0.228 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 1020.0
margin_top = -66.0
margin_right = 1204.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 5 )
text = "Salve-se!"

[node name="Save" parent="." instance=ExtResource( 7 )]
position = Vector2( 680, -344 )

[node name="HelpScreen" type="Panel" parent="."]
visible = false
margin_left = -112.0
margin_top = -66.0
margin_right = 1169.0
margin_bottom = 518.0

[node name="NinePatchRect" type="NinePatchRect" parent="HelpScreen"]
margin_right = 1272.0
margin_bottom = 568.0

[node name="Label" type="Label" parent="HelpScreen"]
margin_left = 11.0
margin_top = 4.0
margin_right = 1251.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 6 )
text = "Parabéns! 
Graças a você, mais uma espécie foi salva da extinção. 
Continue ajudando a preservar os animais e sempre
que presenciar atitudes ruins, tais como a caça,
 denuncie!"

[node name="Quit" type="Button" parent="HelpScreen"]
margin_left = 434.0
margin_top = 423.0
margin_right = 642.0
margin_bottom = 502.0
custom_colors/font_color_focus = Color( 0.729412, 0.94902, 0.639216, 1 )
custom_colors/font_color = Color( 0.933333, 0.956863, 0.909804, 1 )
custom_colors/font_color_hover = Color( 0.184314, 0.921569, 0.101961, 1 )
custom_colors/font_color_pressed = Color( 0.737255, 0.964706, 0.0313726, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Sair"

[node name="AraraAzul" type="Sprite" parent="HelpScreen/Quit"]
position = Vector2( 378, 7 )
scale = Vector2( 0.504, 0.358 )
texture = ExtResource( 8 )

[connection signal="body_entered" from="Save" to="." method="_on_Save_body_entered"]
[connection signal="pressed" from="HelpScreen/Quit" to="." method="_on_Quit_pressed"]
